# physics-based-renderer

./: .gitignore  CMakeLists.txt  README.md  build.sh  download_textures.sh  install_dependencies.sh  run.sh
docs/: advanced_features.md  troubleshooting.md
include/: Camera.h  IBL.h  Material.h  Mesh.h  Model.h  Shader.h  TextureLoader.h
resources/textures/hdr/: environment.hdr
shaders/: basic.fs  basic.vs  brdf.fs  equirectangular_to_cubemap.fs  irradiance_convolution.fs  pbr.fs  prefilter.fs  prefilter.vs  skybox.fs  skybox.vs
src/: Camera.cpp  IBL.cpp  Material.cpp  Mesh.cpp  Model.cpp  Shader.cpp  TextureLoader.cpp  main.cpp
